<resources>
    <string name="app_name">My Application14</string>
    <string name="quranapp">Quran App</string>
    <string name="englishsurah">English Surah Index</string>
    <string name="urdusurah">Urdu Surah Index</string>
    <string name="englishpara">English Parah Index</string>
    <string name="urdupara">Urdu Parah Index</string>
    <string name="open">open</string>
    <string name="close">close</string>



</resources>