<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quranapp"
        android:layout_width="123dp"
        android:layout_height="40dp"
        android:layout_marginTop="68dp"
        android:background="#CFFBD1"
        android:backgroundTint="#E9FDD0"
        android:text="@string/quranapp"
        android:textColor="#307A33"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/englishsurah"
        android:layout_width="246dp"
        android:layout_height="55dp"
        android:backgroundTint="#37853A"
        android:text="@string/englishsurah"
        app:layout_constraintBottom_toTopOf="@+id/urdusurah"
        app:layout_constraintEnd_toEndOf="@+id/quranapp"
        app:layout_constraintStart_toStartOf="@+id/quranapp"
        app:layout_constraintTop_toBottomOf="@+id/quranapp" />

    <Button
        android:id="@+id/urdusurah"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#347A37"
        android:text="@string/urdusurah"
        app:layout_constraintEnd_toEndOf="@+id/englishsurah"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/englishsurah"
        app:layout_constraintTop_toBottomOf="@+id/quranapp" />

    <Button
        android:id="@+id/englishparah"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#37853A"
        android:text="@string/englishpara"
        app:layout_constraintEnd_toEndOf="@+id/urdusurah"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="@+id/urdusurah"
        app:layout_constraintTop_toBottomOf="@+id/urdusurah" />

    <Button
        android:id="@+id/urduparah"
        android:layout_width="248dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#37853A"
        android:text="@string/urdupara"
        app:layout_constraintEnd_toEndOf="@+id/englishparah"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/englishparah"
        app:layout_constraintTop_toBottomOf="@+id/englishparah" />
</androidx.constraintlayout.widget.ConstraintLayout>